fix(burp): fix Java 11 compatibility in TitleExtractor
- Replace Stream.toList() with Stream.collect(Collectors.toList())
- Add missing import for java.util.stream.Collectors